--- a/.github/workflows/mypy_primer.yml
+++ b/.github/workflows/mypy_primer.yml
@@ -37,35 +37,38 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - name: Install dependencies
-        run: |
-          python -m pip install -U pip
-          pip install git+https://github.com/hauntsaninja/mypy_primer.git
-      - name: Run mypy_primer
-        shell: bash
-        run: |
-          cd mypy_to_test
-          echo "new commit"
-          git rev-list --format=%s --max-count=1 $GITHUB_SHA
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install -U pip
+      #     pip install git+https://github.com/hauntsaninja/mypy_primer.git
+      # - name: Run mypy_primer
+      #   shell: bash
+      #   run: |
+      #     cd mypy_to_test
+      #     echo "new commit"
+      #     git rev-list --format=%s --max-count=1 $GITHUB_SHA
 
-          MERGE_BASE=$(git merge-base $GITHUB_SHA origin/$GITHUB_BASE_REF)
-          git checkout -b base_commit $MERGE_BASE
-          echo "base commit"
-          git rev-list --format=%s --max-count=1 base_commit
+      #     MERGE_BASE=$(git merge-base $GITHUB_SHA origin/$GITHUB_BASE_REF)
+      #     git checkout -b base_commit $MERGE_BASE
+      #     echo "base commit"
+      #     git rev-list --format=%s --max-count=1 base_commit
 
-          echo ''
-          cd ..
-          # fail action if exit code isn't zero or one
-          (
-            mypy_primer \
-            --repo mypy_to_test \
-            --new $GITHUB_SHA --old base_commit \
-            --num-shards 5 --shard-index ${{ matrix.shard-index }} \
-            --debug \
-            --additional-flags="--debug-serialize" \
-            --output concise \
-            | tee diff_${{ matrix.shard-index }}.txt
-          ) || [ $? -eq 1 ]
+      #     echo ''
+      #     cd ..
+      #     # fail action if exit code isn't zero or one
+      #     (
+      #       mypy_primer \
+      #       --repo mypy_to_test \
+      #       --new $GITHUB_SHA --old base_commit \
+      #       --num-shards 5 --shard-index ${{ matrix.shard-index }} \
+      #       --debug \
+      #       --additional-flags="--debug-serialize" \
+      #       --output concise \
+      #       | tee diff_${{ matrix.shard-index }}.txt
+      #     ) || [ $? -eq 1 ]
+      - name: Create files
+        run: |
+          touch diff_${{ matrix.shard-index }}.txt
       - name: Upload mypy_primer diff
         uses: actions/upload-artifact@v3
         with:
