--- a/.github/workflows/mypy_primer_comment.yml
+++ b/.github/workflows/mypy_primer_comment.yml
@@ -22,13 +22,16 @@ jobs:
         with:
           script: |
             const fs = require('fs');
+            console.log("${{ github.event.workflow_run.id }}");
             const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
                run_id: ${{ github.event.workflow_run.id }},
             });
+            console.log(artifacts);
             const [matchArtifact] = artifacts.data.artifacts.filter((artifact) =>
               artifact.name == "mypy_primer_diffs");
+            console.log(matchArtifact);
 
             const download = await github.rest.actions.downloadArtifact({
                owner: context.repo.owner,
