--- a/.github/workflows/mypy_primer.yml
+++ b/.github/workflows/mypy_primer.yml
@@ -14,6 +14,8 @@ on:
     - 'mypy/stubgenc.py'
     - 'mypy/test/**'
     - 'test-data/**'
+    - '.github/**'
+    - 'tox.ini'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
