--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ passenv =
     PROGRAMFILES(X86)
     PYTEST_ADDOPTS
 deps = -rtest-requirements.txt
-commands = python -m pytest {posargs}
+commands = python -m pytest -k testTypedPkgSimpleEditable {posargs}
 
 [testenv:dev]
 description = generate a DEV environment, that has all project libraries
