--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
       matrix:
         include:
         - name: Test suite with py38-macos
-          python: '3.8'
+          python: '3.8.10'
           arch: x64
           os: macos-latest
           toxenv: py
@@ -81,6 +81,7 @@ jobs:
   python-nightly:
     runs-on: ubuntu-latest
     name: Test suite with Python nightly
+    if: false
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
@@ -99,6 +100,7 @@ jobs:
   python_32bits:
     runs-on: ubuntu-latest
     name: Test mypyc suite with 32-bit Python
+    if: false
     env:
       TOX_SKIP_MISSING_INTERPRETERS: False
       # Rich (pip)
