--- a/.github/workflows/mypy_primer.yml
+++ b/.github/workflows/mypy_primer.yml
@@ -16,6 +16,7 @@ on:
     - 'test-data/**'
     - '.github/**'
     - 'tox.ini'
+    - 'test-requirements.txt'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
