--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,9 @@ jobs:
         ./misc/build-debug-python.sh $PYTHONVERSION $PYTHONDIR $VENV
         source $VENV/bin/activate
     - name: Install tox
-      run: pip install --upgrade 'setuptools!=50' tox==4.4.4
+      run: |
+        python -m pip install -U pip
+        pip install --upgrade 'setuptools!=50' tox==4.4.4
     - name: Compiled with mypyc
       if: ${{ matrix.test_mypyc }}
       run: |
@@ -77,7 +79,6 @@ jobs:
       run: tox run -e ${{ matrix.toxenv }} --notest
     - name: Test
       run: |
-        python -m pip install -U pip
         tox run -e ${{ matrix.toxenv }} --skip-pkg-install -- ${{ matrix.tox_extra_args }}
 
   python-nightly:
