--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,6 +22,7 @@ concurrency:
 jobs:
   main:
     runs-on: ${{ matrix.os }}
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -183,6 +184,8 @@ jobs:
           command: python -c "import platform; print(f'{platform.architecture()=} {platform.machine()=}');"
       - name: Install tox
         run: pip install --upgrade 'setuptools!=50' tox==4.4.4
+      - name: Show pip debug info
+        run: pip debug -v
       - name: Setup tox environment
         run: tox run -e py --notest
       - name: Test
