--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,74 +31,30 @@ jobs:
         include:
         # Make sure to run mypyc compiled unit tests for both
         # the oldest and newest supported Python versions
-        - name: Test suite with py39-ubuntu, mypyc-compiled
-          python: '3.9'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
         - name: Test suite with py39-windows-64
           python: '3.9'
           arch: x64
           os: windows-latest
           toxenv: py39
-          tox_extra_args: "-n 4"
-        - name: Test suite with py310-ubuntu
+          tox_extra_args: "-n 4 mypyc/test/test_run.py"
+        - name: Test suite with py310-windows-64
           python: '3.10'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-        - name: Test suite with py311-ubuntu, mypyc-compiled
-          python: '3.11'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
-        - name: Test suite with py312-ubuntu, mypyc-compiled
-          python: '3.12'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
-
-        - name: mypyc runtime tests with py39-macos
-          python: '3.9.19'
-          arch: x64
-          # TODO: macos-13 is the last one to support Python 3.9, change it to macos-latest when updating the Python version
-          os: macos-13
-          toxenv: py
-          tox_extra_args: "-n 3 mypyc/test/test_run.py mypyc/test/test_external.py"
-        - name: mypyc runtime tests with py39-debug-build-ubuntu
-          python: '3.9.19'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4 mypyc/test/test_run.py mypyc/test/test_external.py"
-          debug_build: true
-
-        - name: Type check our own code (py39-ubuntu)
-          python: '3.9'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: type
-        - name: Type check our own code (py39-windows-64)
-          python: '3.9'
           arch: x64
           os: windows-latest
-          toxenv: type
-
-          # We also run these checks with pre-commit in CI,
-          # but it's useful to run them with tox too,
-          # to ensure the tox env works as expected
-        - name: Formatting and code style with Black + ruff
-          python: '3.10'
+          toxenv: py310
+          tox_extra_args: "-n 4 mypyc/test/test_run.py"
+        - name: Test suite with py311-windows-64
+          python: '3.11'
           arch: x64
-          os: ubuntu-latest
-          toxenv: lint
+          os: windows-latest
+          toxenv: py311
+          tox_extra_args: "-n 4 mypyc/test/test_run.py"
+        - name: Test suite with py312-windows-64
+          python: '3.12'
+          arch: x64
+          os: windows-latest
+          toxenv: py312
+          tox_extra_args: "-n 4 mypyc/test/test_run.py"
 
     name: ${{ matrix.name }}
     env:
@@ -144,6 +100,7 @@ jobs:
   python_32bits:
     runs-on: ubuntu-latest
     name: Test mypyc suite with 32-bit Python
+    if: false
     env:
       TOX_SKIP_MISSING_INTERPRETERS: False
       # Rich (pip)
