--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -152,7 +152,7 @@ jobs:
     name: Test suite with Python nightly
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: deadsnakes/action@v3.1.0
         with:
           python-version: '3.13-dev'
       - name: Install tox
