Test win64 mypyc compiled with Python 3.13.0

--- a/.github/workflows/mypy_primer.yml
+++ b/.github/workflows/mypy_primer.yml
@@ -4,6 +4,7 @@ on:
   # Only run on PR, since we diff against master
   pull_request:
     paths-ignore:
+    - '.github/**'
     - 'docs/**'
     - '**/*.rst'
     - '**/*.md'
