--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,6 @@ name: Tests
 on:
   workflow_dispatch:
   push:
-    branches: [main, master, 'release*']
-    tags: ['*']
   pull_request:
     paths-ignore:
     - 'docs/**'
@@ -18,9 +16,9 @@ on:
 permissions:
   contents: read
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
-  cancel-in-progress: true
+# concurrency:
+#   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+#   cancel-in-progress: true
 
 jobs:
   main:
@@ -31,52 +29,52 @@ jobs:
         include:
         # Make sure to run mypyc compiled unit tests for both
         # the oldest and newest supported Python versions
-        - name: Test suite with py38-ubuntu, mypyc-compiled
-          python: '3.8'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
+        # - name: Test suite with py38-ubuntu, mypyc-compiled
+        #   python: '3.8'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: py
+        #   tox_extra_args: "-n 4"
+        #   test_mypyc: true
         - name: Test suite with py38-windows-64
           python: '3.8'
           arch: x64
           os: windows-latest
           toxenv: py38
-          tox_extra_args: "-n 4"
+          tox_extra_args: "-n 0 mypy/test/testpythoneval.py::PythonEvaluationSuite::pythoneval.test::testDataclassReplace"
         - name: Test suite with py39-ubuntu
           python: '3.9'
           arch: x64
           os: ubuntu-latest
           toxenv: py
-          tox_extra_args: "-n 4"
-        - name: Test suite with py310-ubuntu
-          python: '3.10'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-        - name: Test suite with py311-ubuntu, mypyc-compiled
-          python: '3.11'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
-        - name: Test suite with py312-ubuntu, mypyc-compiled
-          python: '3.12'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
-        - name: Test suite with py313-ubuntu, mypyc-compiled
-          python: '3.13'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: py
-          tox_extra_args: "-n 4"
-          test_mypyc: true
+          tox_extra_args: "-n 0 mypy/test/testpythoneval.py::PythonEvaluationSuite::pythoneval.test::testDataclassReplace"
+        # - name: Test suite with py310-ubuntu
+        #   python: '3.10'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: py
+        #   tox_extra_args: "-n 4"
+        # - name: Test suite with py311-ubuntu, mypyc-compiled
+        #   python: '3.11'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: py
+        #   tox_extra_args: "-n 4"
+        #   test_mypyc: true
+        # - name: Test suite with py312-ubuntu, mypyc-compiled
+        #   python: '3.12'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: py
+        #   tox_extra_args: "-n 4"
+        #   test_mypyc: true
+        # - name: Test suite with py313-ubuntu, mypyc-compiled
+        #   python: '3.13'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: py
+        #   tox_extra_args: "-n 4"
+        #   test_mypyc: true
 
         # - name: Test suite with py314-dev-ubuntu
         #   python: '3.14-dev'
@@ -87,13 +85,13 @@ jobs:
         #   allow_failure: true
         #   test_mypyc: true
 
-        - name: mypyc runtime tests with py39-macos
-          python: '3.9.18'
-          arch: x64
-          # TODO: macos-13 is the last one to support Python 3.9, change it to macos-latest when updating the Python version
-          os: macos-13
-          toxenv: py
-          tox_extra_args: "-n 3 mypyc/test/test_run.py mypyc/test/test_external.py"
+        # - name: mypyc runtime tests with py39-macos
+        #   python: '3.9.18'
+        #   arch: x64
+        #   # TODO: macos-13 is the last one to support Python 3.9, change it to macos-latest when updating the Python version
+        #   os: macos-13
+        #   toxenv: py
+        #   tox_extra_args: "-n 3 mypyc/test/test_run.py mypyc/test/test_external.py"
         # This is broken. See
         # - https://github.com/python/mypy/issues/17819
         # - https://github.com/python/mypy/pull/17822
@@ -105,25 +103,25 @@ jobs:
         #   tox_extra_args: "-n 4 mypyc/test/test_run.py mypyc/test/test_external.py"
         #   debug_build: true
 
-        - name: Type check our own code (py38-ubuntu)
-          python: '3.8'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: type
-        - name: Type check our own code (py38-windows-64)
-          python: '3.8'
-          arch: x64
-          os: windows-latest
-          toxenv: type
+        # - name: Type check our own code (py38-ubuntu)
+        #   python: '3.8'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: type
+        # - name: Type check our own code (py38-windows-64)
+        #   python: '3.8'
+        #   arch: x64
+        #   os: windows-latest
+        #   toxenv: type
 
           # We also run these checks with pre-commit in CI,
           # but it's useful to run them with tox too,
           # to ensure the tox env works as expected
-        - name: Formatting and code style with Black + ruff
-          python: '3.10'
-          arch: x64
-          os: ubuntu-latest
-          toxenv: lint
+        # - name: Formatting and code style with Black + ruff
+        #   python: '3.10'
+        #   arch: x64
+        #   os: ubuntu-latest
+        #   toxenv: lint
 
     name: ${{ matrix.name }}
     env:
@@ -205,6 +203,7 @@ jobs:
   python_32bits:
     runs-on: ubuntu-latest
     name: Test mypyc suite with 32-bit Python
+    if: false
     env:
       TOX_SKIP_MISSING_INTERPRETERS: False
       # Rich (pip)
