--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,10 @@ passenv =
     PROGRAMDATA
     PROGRAMFILES(X86)
     PYTEST_ADDOPTS
+    PY_COLORS
+    TERM
+    MYPY_FORCE_COLOR
+    MYPY_FORCE_TERMINAL_WIDTH
 deps = -rtest-requirements.txt
 commands = python -m pytest {posargs}
 
