--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,7 @@ jobs:
           arch: x64
           os: windows-latest
           toxenv: py38
+          color: false
           tox_extra_args: "-n 0 mypy/test/testpythoneval.py::PythonEvaluationSuite::pythoneval.test::testDataclassReplace"
         - name: Test suite with py39-ubuntu
           python: '3.9'
@@ -127,7 +128,7 @@ jobs:
     env:
       TOX_SKIP_MISSING_INTERPRETERS: False
       # Rich (pip)
-      FORCE_COLOR: 1
+      FORCE_COLOR: ${{ matrix.color != 'false' && 1 || 0 }}
       # Tox
       PY_COLORS: 1
       # Mypy (see https://github.com/python/mypy/issues/7771)
