--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,7 +41,7 @@ jobs:
           arch: x64
           os: windows-latest
           toxenv: py38
-          color: 0
+          color: false
           tox_extra_args: "-n 0 mypy/test/testpythoneval.py::PythonEvaluationSuite::pythoneval.test::testDataclassReplace"
         - name: Test suite with py39-ubuntu
           python: '3.9'
@@ -142,8 +142,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: |
         echo "matrix.color: ${{ matrix.color }}"
-        echo "matrix.color || 1: ${{ matrix.color || 1 }}"
-        echo "matrix.color && 1: ${{ matrix.color && 1 }}"
+        echo "matrix.color != 'false' && 1 || 0: ${{ matrix.color != 'false' && 1 || 0 }}"
 
     - name: Debug build
       if: ${{ matrix.debug_build }}
