--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -142,6 +142,7 @@ jobs:
     - uses: actions/checkout@v4
     - run: |
         echo "matrix.color: ${{ matrix.color }}"
+        echo "matrix.color != 'false': ${{ matrix.color != 'false' }}"
         echo "matrix.color != 'false' && 1 || 0: ${{ matrix.color != 'false' && '1' || '0' }}"
 
     - name: Debug build
